--- a/duan1 (1)/nbproject/project.properties
+++ b/duan1 (1)/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/duan1
 excludes=
+file.reference.mssql-jdbc-12.2.0.jre11.jar=C:\\Users\\ADMIN\\Downloads\\sqljdbc_12.2.0.0_enu\\sqljdbc_12.2\\enu\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.mssql-jdbc-9.2.1.jre8.jar=C:\\Users\\MSI8\\Documents\\NetBeansProjects\\lib\\mssql-jdbc-9.2.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}
+    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}:\
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
